actividad_tab_pais

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,6 @@
     <string name="colombia">COLOMBIA</string>
     <string name="chile">CHILE</string>
     <string name="venezuela">VENEZUELA</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
