--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="costa">ENCEBOLLADO</string>
+    <string name="ingredientes">Ingredientes</string>
+    <string name="receta">RECETA</string>
+    <string name="concejo_de_cocina">Concejo de cocina</string>
+    <string name="consejo_de_cocina">Consejo de cocina</string>
 </resources>
